Fixed footer jumping on load.

--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ footer {
   font-family: "Lucida Console", Monaco, monospace;
   font-size: 12px;
   margin-top: 30px;
+  display: none;
 }
 
 #copyright {
